test/webgl/error/unterminated_comment.true
File 0, line 2, col 2:
unterminated comment

Fatal: unrecoverable parse error (2)
